--- a/src/styles/components/_hello.scss
+++ b/src/styles/components/_hello.scss
@@ -1,5 +1,4 @@
 .hello-container {
-  backface-visibility: hidden;
   color: $gray;
   font-size: 35vw;
   font-weight: 500;
